# social-eval

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  README.md  STATUS_AND_PLAN_2026-04-19.md  alembic.ini  development-roadmap.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
docs/: SocialEval-current-user-manual-2026-04-21.md
raw/: 11_法学研究_论文信息.xlsx
results/: baseline-v2.20.json  convergence-test-20260424-094830.json  convergence-test-20260424-094948.json  convergence-test-20260424-095008.json  convergence-test-dim1.json  convergence-test-full-v214.json  convergence-test-full-v215-rerun2.json  convergence-test-full-v215.json  convergence-test-full-v217.json  convergence-test-full-v218-duyanlin.json  convergence-test-full-v218-sihuaqiang.json  convergence-test-full-v218-zhangwenxian.json  convergence-test-full-v218-zhengxiaojian.json  convergence-test-full-v230-duyanlin.json  convergence-test-full-v230-sihuaqiang.json  convergence-test-full-v230-zhangwenxian.json  convergence-test-full-v230-zhengxiaojian.json  convergence-test-full-v231-duyanlin.json  convergence-test-full-v231-sihuaqiang.json  convergence-test-full-v231-zhangwenxian.json  convergence-test-full-v231-zhengxiaojian.json  convergence-test-full-v28-gpt-qwen-glm.json  convergence-test-full-v28.json  convergence-test-full-v29.json  convergence-test-gpt-qwen-glm-lit.json  convergence-test-v210-af.json  convergence-test-v211-fe.json  convergence-test-v212-li-v2.json  convergence-test-v212-li.json  convergence-test-v213-cc.json  (+30 more)
scripts/: dashboard.py  (+9 more)
(+360 files in other folders)
